--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-slate
 title: "2020 ICPC Asia Taiwan Online Programming Contest"
 google_analytics: UA-159257887-4
