--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-architect
 title: "2020 ICPC Asia Taiwan Online Programming Contest"
 google_analytics: UA-159257887-4
