--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
 theme: jekyll-theme-architect
-title: "2020 ICPC Asia Taiwan Online Programming Contest"
-google_analytics: UA-159257887-4
+title: "Competitive Programming Training Contest"
